# crusty-hooks

./: .crusty-hooks.toml  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  codebook.toml
.github/workflows/: linux.yml
cmd/: Cargo.toml
cmd/src/: main.rs
src/: config.rs  git.rs  hooks.rs  init_directory.rs  lib.rs  main.rs  tests.rs
src/config/: tests.rs
src/git/: tests.rs
src/hooks/: tests.rs
src/hooks/files/: cli.sh  hook_script.sh  semver.sh
