[package]
name = "rusty-hooks-integration"
version = "0.12.0"
authors = ["Kai Mast <kai@kaimast.com>", "Swellaby <opensource@swellaby.com>"]
description = "Utility functions for rusty-hooks"
license = "MIT"
repository = "https://github.com/kaimast/rusty-hook"
readme = "README.md"
edition = "2021"
keywords = [ "hooks", "githook", "git", "hook", "commit" ]
categories = [ "development-tools" ]
rust-version = "1.82"

[dependencies]
toml = "0.8"

[build-dependencies]
ci_info = "0.14"
toml = "0.8"
nias = "0.7"

[workspace]
members = ["cmd"]
