[package]
name = "crusty-hooks"
version = "0.1.0"
authors = ["Kai Mast <kai@kaimast.com>", "Swellaby <opensource@swellaby.com>"]
description = "git hooks integration for Rust projects"
license = "MIT"
repository = "https://github.com/whamcloud/crusty-hooks"
readme = "README.md"
edition = "2024"
keywords = ["hooks", "githook", "git", "hook", "commit"]
categories = ["development-tools"]
rust-version = "1.89"
default-run = "crusty-hooks"

[[bin]]
name = "crusty-hooks"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.9"
ci_info = "0.14"
nias = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
shlex = "1.3.0"
indicatif = "0.18.0"
tracing-indicatif = "0.3.13"

[dev-dependencies]
insta = "1"

[build-dependencies]
ci_info = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
nias = "0.7"
