[package]
name = "rusty-hook"
version = "0.12.0"
authors = ["Kai Mast <kai@kaimast.com>", "Swellaby <opensource@swellaby.com>"]
description = "git hook utility"
license = "MIT"
repository = "https://github.com/kaimast/rusty-hook"
readme = "README.md"
edition = "2021"
keywords = [ "hooks", "githook", "git", "hook", "commit" ]
categories = [ "development-tools" ]
rust-version = "1.82"

[dependencies]
ci_info = "0.14"
nias = "0.7"
rusty-hook = { path="..", package="rusty-hook-lib" }
clap = { version="4", features=["derive"] }
